--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,6 +9,7 @@
     "glamor": "^2.20.40",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-say": "0.0.1-master.d7ce791",
     "react-scripts": "1.1.4"
   },
   "scripts": {
