--- a/packages/component/.babelrc
+++ b/packages/component/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "transform-runtime"
   ],
   "presets": [
     ["env", {
