--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "build": "babel --out-dir lib --ignore **/*.spec.js,**/*.test.js --source-maps inline src/",
     "clean": "rimraf lib",
-    "test": "jest"
+    "test": "jest",
+    "watch": "npm run build -- --watch"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "jest": "^22.4.4",
+    "react": "^16.4.2",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "event-as-promise": "^1.0.3",
     "glamor": "^2.20.40",
     "memoize-one": "^4.0.0"
   }
