Add Cognitive Services for sample

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -7,9 +7,11 @@
     "classnames": "^2.2.6",
     "component": "^1.0.0",
     "glamor": "^2.20.40",
+    "microsoft-speech-browser-sdk": "^0.0.12",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "web-speech-cognitive-services": "2.1.1-master.0f7758b"
   },
   "scripts": {
     "start": "react-scripts start",
