--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "lerna run build",
-    "test": "lerna run test"
+    "build": "lerna run --stream build",
+    "test": "lerna run --stream test",
+    "watch": "lerna run --parallel --stream watch"
   },
   "author": "William Wong <compulim@hotmail.com> (http://compulim.info/)",
   "license": "MIT",
