--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,8 +9,9 @@
     "core-js": "^2.5.7",
     "glamor": "^2.20.40",
     "microsoft-speech-browser-sdk": "^0.0.12",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-script": "^2.0.5",
     "react-scripts": "1.1.4",
     "url-search-params-polyfill": "^5.0.0",
     "web-speech-cognitive-services": "2.1.1-master.0f7758b"
