--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/compulim/react-say#readme",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
     "event-as-promise": "^1.0.3",
     "glamor": "^2.20.40",
