--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -21,6 +21,7 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
     "event-as-promise": "^1.0.5",
     "glamor": "^2.20.40",
