--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "has-resolved": "^1.1.0",
     "jest": "^22.4.4",
     "react": "^16.4.2",
     "rimraf": "^2.6.2"
