--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "echo Test disabled",
     "eject": "react-scripts eject"
   },
   "browserslist": [
