--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
   },
   "homepage": "https://github.com/compulim/react-say#readme",
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "@babel/runtime": "^7.4.5",
     "classnames": "^2.2.6",
     "event-as-promise": "^1.0.3",
     "glamor": "^2.20.40",
-    "memoize-one": "^4.0.0"
+    "memoize-one": "^5.0.4"
   },
   "peerDependencies": {
     "react": "^16.4.1"
   },
   "devDependencies": {
-    "lerna": "^2.11.0"
+    "lerna": "^3.14.1"
   }
 }
