--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -10,22 +10,22 @@
     "watch": "npm run build -- --watch"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "has-resolved": "^1.1.0",
-    "jest": "^22.4.4",
+    "jest": "^24.8.0",
     "react": "^16.4.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "@babel/runtime": "^7.4.5",
     "classnames": "^2.2.6",
     "event-as-promise": "^1.0.5",
     "glamor": "^2.20.40",
-    "memoize-one": "^4.0.0"
+    "memoize-one": "^5.0.4"
   }
 }
