--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run --stream build",
-    "test": "lerna run --stream test",
-    "watch": "lerna run --parallel --stream watch"
+    "start": "lerna run --parallel --stream start",
+    "test": "lerna run --stream test"
   },
   "author": "William Wong <compulim@hotmail.com> (http://compulim.info/)",
   "license": "MIT",
