--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,13 +1,37 @@
 {
-  "name": "component",
-  "version": "1.0.0",
+  "name": "react-say",
+  "version": "0.0.0-0",
   "description": "",
+  "keywords": [
+    "react",
+    "speak",
+    "speech synthesis",
+    "speechsynthesis",
+    "text to speech",
+    "tts",
+    "utterance",
+    "web speech",
+    "webspeech"
+  ],
+  "author": "William Wong <compulim@hotmail.com> (http://compulim.info/)",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/compulim/react-say.git"
+  },
+  "bugs": {
+    "url": "https://github.com/compulim/react-say/issues"
+  },
+  "homepage": "https://github.com/compulim/react-say#readme",
   "main": "lib/index.js",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "build": "babel --out-dir lib --ignore **/*.spec.js,**/*.test.js --source-maps inline src/",
     "clean": "rimraf lib",
-    "test": "jest",
-    "watch": "npm run build -- --watch"
+    "start": "npm run build -- --watch",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -18,14 +42,16 @@
     "@babel/preset-react": "^7.0.0",
     "has-resolved": "^1.1.0",
     "jest": "^24.8.0",
-    "react": "^16.4.2",
     "rimraf": "^2.6.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.5",
+    "@babel/runtime": "^7.6.3",
     "classnames": "^2.2.6",
     "event-as-promise": "^1.0.5",
     "glamor": "^2.20.40",
     "memoize-one": "^5.0.4"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6"
   }
 }
