--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -34,22 +34,20 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "has-resolved": "^1.1.0",
-    "jest": "^24.8.0",
-    "rimraf": "^2.6.3"
+    "jest": "^24.9.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.6.3",
+    "@babel/runtime": "^7.7.2",
     "classnames": "^2.2.6",
     "event-as-promise": "^1.0.5",
-    "glamor": "^2.20.40",
-    "memoize-one": "^5.0.4"
+    "memoize-one": "^5.1.1"
   },
   "peerDependencies": {
     "react": "^16.8.6"
