--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "version": "2.1.0",
+  "version": "2.1.1-0",
   "description": "A React component that synthesis text into speech using Web Speech API",
   "private": true,
   "scripts": {
