--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -79,7 +79,6 @@
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-say": "^0.0.0-0",
-    "web-speech-cognitive-services": "8.1.3"
+    "react-say": "^0.0.0-0"
   }
 }
