--- a/packages/react-say/package.json
+++ b/packages/react-say/package.json
@@ -54,7 +54,14 @@
     "url": "https://github.com/compulim/react-say/issues"
   },
   "homepage": "https://github.com/compulim/react-say#readme",
-  "pinDependencies": {},
+  "pinDependencies": {
+    "@types/react": [
+      "18"
+    ],
+    "react": [
+      "18"
+    ]
+  },
   "peerDependencies": {
     "react": ">= 16.8.6"
   },
@@ -64,6 +71,7 @@
     "@tsconfig/recommended": "^1.0.10",
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^24.0.3",
+    "@types/react": "^18.3.23",
     "esbuild": "^0.25.5",
     "escape-string-regexp": "^4.0.0",
     "expect": "^30.0.4",
@@ -71,6 +79,7 @@
     "has-resolved": "^1.1.0",
     "prettier": "^3.5.3",
     "publint": "^0.3.12",
+    "react": "^18.3.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
