--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -71,11 +71,11 @@
     "@types/node": "^24.0.15",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "esbuild": "^0.25.5",
+    "esbuild": "^0.25.8",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@emotion/css": "11.13.5",
+    "@emotion/css": "^11.13.5",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
