--- a/packages/react-say/package.json
+++ b/packages/react-say/package.json
@@ -67,26 +67,26 @@
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^18.0.1",
-    "@testduet/given-when-then": "^0.1.0-main.334801c",
+    "@testduet/given-when-then": "^0.1.0-main.5e524dc",
     "@tsconfig/recommended": "^1.0.10",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.15",
     "@types/react": "^18.3.23",
-    "esbuild": "^0.25.5",
-    "escape-string-regexp": "^4.0.0",
+    "esbuild": "^0.25.8",
+    "escape-string-regexp": "^5.0.0",
     "expect": "^30.0.4",
     "happy-dom": "^18.0.1",
     "has-resolved": "^1.1.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "publint": "^0.3.12",
     "react": "^18.3.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "classnames": "2.3.1",
-    "event-as-promise": "1.0.5",
-    "memoize-one": "5.2.1",
-    "prop-types": "15.8.1"
+    "classnames": "^2.5.1",
+    "event-as-promise": "^2.0.0",
+    "memoize-one": "^6.0.0",
+    "prop-types": "^15.8.1"
   }
 }
