--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "postscaffold:eslint:react": "npm run bump:eslintrc",
     "precommit": "npm run precommit --if-present --workspaces",
     "switch:_": "npm run --if-present --workspaces switch && npm install --legacy-peer-deps --prefer-dedupe",
+    "switch:react-16": "SWITCH_NAME=react-16 npm run switch:_",
+    "switch:react-17": "SWITCH_NAME=react-17 npm run switch:_",
+    "switch:react-18": "SWITCH_NAME=react-18 npm run switch:_",
     "test": "npm run test --if-present --workspaces"
   },
   "devDependencies": {
