--- a/packages/pages/src/tsconfig.json
+++ b/packages/pages/src/tsconfig.json
@@ -3,7 +3,11 @@
     "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "lib": ["DOM", "ESNext", "WebWorker"],
+    "lib": [
+      "DOM",
+      "ESNext",
+      "WebWorker"
+    ],
     "module": "esnext",
     "moduleResolution": "bundler",
     "noEmit": true,
