Enable JSX in JS

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -61,6 +61,8 @@ overrides:
       - '**/*.ts'
       - '**/*.tsx'
 parserOptions:
+  ecmaFeatures:
+    jsx: true
   ecmaVersion: latest
   sourceType: module
 plugins:
